# p6-python

./: .gitignore  Bench.py  README.md  abc.txt  file.txt  fileProto1.txt  fileProto3.txt  main.py  requirements.txt  setup.cfg  z.csv  z.json
antlr4/: Formula.g4  generateAntlr.sh
src/bicp_document_structure/: bench.py
src/bicp_document_structure/app/: App.py  AppImp.py  AppInit.py  EntryPoint.py  GlobalScope.py  Other.py  SingleBookApp.py  UserFunctions.py
src/bicp_document_structure/cell/: CacheCell.py  Cell.py  CellJson.py  Cells.py  DataCell.py  EventCell.py  TempCell.py  WrapperCell.py  WriteBackCell.py
src/bicp_document_structure/cell_container/: CellContainer.py  MutableCellContainer.py  UserFriendlyCellContainer.py
src/bicp_document_structure/code_executor/: CodeExecutor.py
src/bicp_document_structure/column/: Column.py  ColumnContainer.py  ColumnImp.py  ColumnJson.py  ColumnWrapper.py  EventColumn.py  MutableColumnContainer.py  TempColumn.py  WriteBackColumn.py
src/bicp_document_structure/common/: ToJsonStr.py
src/bicp_document_structure/communication/: P6Message.py  P6MessageHeader.py  SocketProviderImp.py
src/bicp_document_structure/error/: ErrorHeader.py  ErrorReport.py
src/bicp_document_structure/event/: P6Event.py  P6Events.py
src/bicp_document_structure/events/: Event.py
src/bicp_document_structure/file/: P6File.py  P6Files.py
src/bicp_document_structure/formula_translator/: DecoratorVisitor.py  DirectLiteralTranslator.py  FormulaTranslator.py  FormulaTranslatorFinal.py  FormulaTranslators.py  MockTranslator.py  PythonLangElements.py  (+9 more)
(+1673 files in other folders)
