[metadata]
name = document-structure
version = 0.0.0
author = Phong Pham
author_email = phong.pham.wke1@example.com
description = document-structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xadkile/bicp-document-structure/
project_urls =
    Bug Tracker = https://github.com/xadkile/bicp-document-structure/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
